# MandelbrotSet

./: .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md  color.py
src/: CMakeLists.txt  main.c
src/MandelbrotSet/: CMakeLists.txt  mandelbrot_set.c  mandelbrot_set_cpu.c  mandelbrot_set_gpu.cu  pgm.c
src/MandelbrotSet/include/MandelbrotSet/: complex.h  image.h  mandelbrot.h  mandelbrot_set.h  pgm.h
src/MandelbrotSet/tests/: CMakeLists.txt  mandelbrot_set_tests.c
